--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CSharp\SlideWalker.cs" />
     <Compile Include="ExerciseAttribute.cs" />
     <Compile Include="ExerciseSlide.cs" />
+    <Compile Include="ExpectedOutput.cs" />
     <Compile Include="Markdown_investigation.cs" />
     <Compile Include="Md.cs" />
     <Compile Include="ResourceLoader.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="StringExtensions_SplitToLines_should.cs" />
     <Compile Include="CSharp\SyntaxExtensions.cs" />
+    <Compile Include="TestExerciseStaff.cs" />
     <Compile Include="tests\ExerciseWithStarterCode.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
