--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -46,10 +46,13 @@
     <Compile Include="Slides\S01-HelloWorld.cs" />
     <Compile Include="Slides\S02-Types.cs" />
     <Compile Include="Slides\S03-Conversion.cs" />
+    <Compile Include="Slides\S04-Strings.cs" />
     <Compile Include="Slides\S05-ParseAndToString.cs" />
     <Compile Include="Slides\S07-Methods.cs" />
     <Compile Include="Slides\S06-Operations .cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slides\S08-Vision.cs" />
+    <Compile Include="Slides\S09-DefaultValues.cs" />
     <Compile Include="Slides\S10-IntelliSense.cs" />
   </ItemGroup>
   <ItemGroup>
