--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ExerciseAttribute.cs" />
     <Compile Include="ExerciseSlide.cs" />
     <Compile Include="ExpectedOutput.cs" />
+    <Compile Include="HideOnSlideAttribute.cs" />
     <Compile Include="Markdown_investigation.cs" />
     <Compile Include="Md.cs" />
     <Compile Include="ResourceLoader.cs" />
@@ -87,8 +88,11 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="StringExtensions_SplitToLines_should.cs" />
     <Compile Include="CSharp\SyntaxExtensions.cs" />
-    <Compile Include="TestExerciseStaff.cs" />
+    <Compile Include="SlideTestsUtils.cs" />
     <Compile Include="tests\HelloWorld.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="tests\AdjacentSamples.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="tests\SelectWhereToArray.cs">
@@ -136,6 +140,7 @@
     <Compile Include="Urls.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CSharp\README.md" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
