--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -615,8 +615,8 @@
   <PropertyGroup>
     <PreBuildEvent>rd /S /Q $(ProjectDir)\Courses
 mkdir $(ProjectDir)\Courses
-xcopy /Y /E $(SolutionDir)Courses\linq\Slides\*.cs $(ProjectDir)\Courses\linq\
-xcopy /Y /E $(SolutionDir)Courses\BasicProgramming\Slides\*.cs $(ProjectDir)\Courses\BasicProgramming\</PreBuildEvent>
+xcopy /Y /E $(SolutionDir)Courses\linq\Slides $(ProjectDir)\Courses\linq\
+xcopy /Y /E $(SolutionDir)Courses\BasicProgramming\Slides $(ProjectDir)\Courses\BasicProgramming\</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
