--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -43,17 +43,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="Slides\S01-HelloWorld.cs" />
-    <Compile Include="Slides\S02-Types.cs" />
-    <Compile Include="Slides\S03-Conversion.cs" />
-    <Compile Include="Slides\S04-Strings.cs" />
-    <Compile Include="Slides\S05-ParseAndToString.cs" />
-    <Compile Include="Slides\S07-Methods.cs" />
-    <Compile Include="Slides\S06-Operations .cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Slides\S08-Vision.cs" />
-    <Compile Include="Slides\S09-DefaultValues.cs" />
-    <Compile Include="Slides\S10-IntelliSense.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S01-HelloWorld.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S02-Types.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S03-Conversion.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S04-Strings.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S05-ParseAndToString.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S06-operations .cs" />
+    <Compile Include="Slides\Unit1-Hello world\S07-Methods.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S08-Vision.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S09-DefaultValues.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S10-IntelliSense.cs" />
     <Compile Include="Slides_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +64,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Slides\BlockName.txt" />
+    <Content Include="Slides\Unit1-Hello world\UnitName.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
