--- a/src/courses/Linq/linq.csproj
+++ b/src/courses/Linq/linq.csproj
@@ -115,8 +115,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Readme.txt" />
-    <Content Include="Slides\BlockName.txt" />
-    <Content Include="Slides\Initial-LINQ\UnitName.txt" />
+    <Content Include="Slides\Title.txt" />
+    <Content Include="Slides\Initial-LINQ\Title.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
