--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -48,8 +48,8 @@
     <Compile Include="Slides\Unit1-Hello world\S03-Conversion.cs" />
     <Compile Include="Slides\Unit1-Hello world\S04-Strings.cs" />
     <Compile Include="Slides\Unit1-Hello world\S05-ParseAndToString.cs" />
+    <Compile Include="Slides\Unit1-Hello world\S06-Operations.cs" />
     <Compile Include="Slides\Unit1-Hello world\S07-Methods.cs" />
-    <Compile Include="Slides\Unit1-Hello world\S06-Operations .cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slides\Unit1-Hello world\S08-Vision.cs" />
     <Compile Include="Slides\Unit1-Hello world\S09-DefaultValues.cs" />
@@ -82,6 +82,8 @@
   <ItemGroup>
     <Content Include="Slides\Title.txt" />
     <Content Include="Slides\Unit1-Hello world\Title.txt" />
+    <Content Include="Slides\Unit2-Mistakes\Title.txt" />
+    <Content Include="Slides\Unit3-If while for\Title.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
