--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -182,6 +182,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\SlidesBarController.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S01-HelloWorld.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S02-Types.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S03-Conversion.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S04-Strings.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S05-ParseAndToString.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S06-operations .cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S07-Methods.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S08-Vision.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S09-DefaultValues.cs" />
+    <Compile Include="Courses\BasicProgramming\Unit1-Hello world\S10-IntelliSense.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\01-SelectWhereToArray.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\02-ReadNumbersExcercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\03-ReadPointsExcercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\04-SelectMany.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\05-SelectManyExercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\06-CartesianProductExercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\07-SortAndDistinct.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\08-SortExercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\09-Tuple.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\10-SortTuplesExercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\11-Grouping.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\12-WordsFrequenciesExercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\13-Lookup.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\14-LookupExercise.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\15-AggregateFunctions.cs" />
+    <Compile Include="Courses\Linq\Initial-LINQ\16-AggregateExercise.cs" />
     <Compile Include="Models\CourseManager_should.cs" />
     <EmbeddedResource Include="Courses\**\*.*">
       <Visible>false</Visible>
@@ -226,6 +253,9 @@
     <Compile Include="Models\RunSolutionResult.cs" />
     <Compile Include="Models\SlideViewModel.cs" />
     <Compile Include="Models\UserSolution.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ideone\ExecutionService.cs" />
     <Compile Include="Service References\Ideone_Service_v1Service.cs" />
@@ -235,6 +265,42 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Antlr3.Runtime.dll" />
+    <Content Include="bin\EntityFramework.dll" />
+    <Content Include="bin\EntityFramework.SqlServer.dll" />
+    <Content Include="bin\MarkdownDeep.dll" />
+    <Content Include="bin\Microsoft.AspNet.Identity.Core.dll" />
+    <Content Include="bin\Microsoft.AspNet.Identity.EntityFramework.dll" />
+    <Content Include="bin\Microsoft.AspNet.Identity.Owin.dll" />
+    <Content Include="bin\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Include="bin\Microsoft.CodeAnalysis.dll" />
+    <Content Include="bin\Microsoft.Owin.dll" />
+    <Content Include="bin\Microsoft.Owin.Host.SystemWeb.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.Cookies.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.Facebook.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.Google.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.MicrosoftAccount.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.OAuth.dll" />
+    <Content Include="bin\Microsoft.Owin.Security.Twitter.dll" />
+    <Content Include="bin\Microsoft.Web.Infrastructure.dll" />
+    <Content Include="bin\Newtonsoft.Json.dll" />
+    <Content Include="bin\nunit.framework.dll" />
+    <Content Include="bin\Owin.dll" />
+    <Content Include="bin\RazorEngine.dll" />
+    <Content Include="bin\System.Collections.Immutable.dll" />
+    <Content Include="bin\System.Reflection.Metadata.dll" />
+    <Content Include="bin\System.Web.Helpers.dll" />
+    <Content Include="bin\System.Web.Mvc.dll" />
+    <Content Include="bin\System.Web.Optimization.dll" />
+    <Content Include="bin\System.Web.Razor.dll" />
+    <Content Include="bin\System.Web.WebPages.Deployment.dll" />
+    <Content Include="bin\System.Web.WebPages.dll" />
+    <Content Include="bin\System.Web.WebPages.Razor.dll" />
+    <Content Include="bin\uLearn.dll" />
+    <Content Include="bin\uLearn.Web.dll" />
+    <Content Include="bin\uLearn.Web.pdb" />
+    <Content Include="bin\WebGrease.dll" />
     <Content Include="codemirror\addon\comment\comment.js" />
     <Content Include="codemirror\addon\comment\continuecomment.js" />
     <Content Include="codemirror\addon\dialog\dialog.css" />
@@ -511,6 +577,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\ulearn.css" />
+    <Content Include="Courses\BasicProgramming\Title.txt" />
+    <Content Include="Courses\BasicProgramming\Unit1-Hello world\Title.txt" />
+    <Content Include="Courses\Linq\Initial-LINQ\Title.txt" />
+    <Content Include="Courses\Linq\Title.txt" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -564,9 +634,11 @@
     <Content Include="Views\Course\Slide.cshtml" />
     <Content Include="Views\Course\_ExerciseHints.cshtml" />
     <Content Include="Views\Course\_SlideNavigation.cshtml" />
+    <Content Include="Views\Course\_Sidebar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="bin\tests\lesson\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
