--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -184,10 +184,14 @@
   <ItemGroup>
     <Compile Include="DataContexts\UserSolutionsRepo_should.cs" />
     <Compile Include="DataContexts\UserSolutionsRepo.cs" />
-    <Compile Include="Ideone\ExecutionServise.Credentials.cs" />
+    <Compile Include="Ideone\ExecutionService.Credentials.cs" />
     <Compile Include="Migrations\201407111234255_InitialCreate.cs" />
     <Compile Include="Migrations\201407111234255_InitialCreate.Designer.cs">
       <DependentUpon>201407111234255_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201407151400345_AddLike.cs" />
+    <Compile Include="Migrations\201407151400345_AddLike.Designer.cs">
+      <DependentUpon>201407151400345_AddLike.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\CourseManager_should.cs" />
     <EmbeddedResource Include="Courses\**\*.*">
@@ -235,6 +239,9 @@
     <Compile Include="Startup.cs" />
     <EmbeddedResource Include="Migrations\201407111234255_InitialCreate.resx">
       <DependentUpon>201407111234255_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407151400345_AddLike.resx">
+      <DependentUpon>201407151400345_AddLike.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -568,6 +575,7 @@
     <Content Include="Views\Course\_ExerciseHints.cshtml" />
     <Content Include="Views\Course\_SlideNavigation.cshtml" />
     <Content Include="Views\Course\_Sidebar.cshtml" />
+    <Content Include="Views\Course\AcceptedSolutions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
