--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -68,6 +68,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcceptedSolutionInfo.cs" />
+    <Compile Include="AcceptedSolutionsPageModel.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="CoursePageModel.cs" />
     <Compile Include="CSharp\SlideWalker.cs" />
